# yue-lat

./: .env.example  .gitignore  Cargo.toml  README.md  askama.toml
src/: main.rs
static/: altcha.js
templates/: api_docs.html  base.html  error.html  index.html  success.html
