[package]
name = "yue-lat"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenv = "0.15.0"
rand = "0.9.1"
serde = { version = "1.0.219" , features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
askama = "0.12"
askama_axum = "0.4"