[package]
name = "yue-lat"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
rand = "0.9"
serde = { version = "1.0" , features = ["derive"] }
tokio = { version = "1.45", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
askama = "0.12"
askama_axum = "0.4"
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = "0.5"
anyhow = "1.0"
axum_csrf = { version = "0.11", features = ["layer"] }
